--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vue-click-outside": "^1.1.0"
+    "vue-click-outside": "^1.1.0",
+    "vue-slick-carousel": "^1.0.6",
+    "vue-star-rating": "^1.7.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
