--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nuxt": "^2.15.7",
     "vue-click-outside": "^1.1.0",
     "vue-slick-carousel": "^1.0.6",
-    "vue-star-rating": "^1.7.0"
+    "vue-star-rating": "^1.7.0",
+    "vue-themify-icons": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
